--- a/ArjunaJTA/pom.xml
+++ b/ArjunaJTA/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.jboss.narayana.quickstart.jta</groupId>
+  <groupId>org.jboss.jbossts.quickstart.jta</groupId>
   <artifactId>quickstarts</artifactId>
-  <version>5.0.0.M2-SNAPSHOT</version>
+  <version>4.17.0.Final-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JBoss JTA Examples</name>
   <description>All quickstarts of JBoss JTA</description>
@@ -102,9 +102,9 @@
       <version>1.0.0.Final</version>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.jta</groupId>
+      <groupId>org.jboss.jbossts.jta</groupId>
       <artifactId>narayana-jta</artifactId>
-      <version>5.0.0.M2-SNAPSHOT</version>
+      <version>4.17.0.Final-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
