--- a/TXFramework/pom.xml
+++ b/TXFramework/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.jboss.narayana.quickstart.txframework</groupId>
+    <groupId>org.jboss.jbossts.quickstart.txframework</groupId>
     <artifactId>narayana-quickstarts-txframework</artifactId>
-    <version>5.0.0.M2-SNAPSHOT</version>
+    <version>4.17.0.Final-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>TXFramework Examples</name>
     <description>All quickstarts of TXFramework</description>
