--- a/XTS/demo/core/pom.xml
+++ b/XTS/demo/core/pom.xml
@@ -4,9 +4,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <parent>
-        <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
+        <groupId>org.jboss.jbossts.quickstarts.xts.demo</groupId>
         <artifactId>xts-demo-all</artifactId>
-        <version>5.0.0.M2-SNAPSHOT</version>
+        <version>4.17.0.Final-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -15,9 +15,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jboss.narayana.xts</groupId>
+            <groupId>org.jboss.jbossts.xts</groupId>
             <artifactId>jbossxts</artifactId>
-            <version>5.0.0.M2-SNAPSHOT</version>
+            <version>4.17.0.Final-SNAPSHOT</version>
             <classifier>api</classifier>
             <scope>provided</scope>
         </dependency>
