--- a/rest-tx/recovery/pom.xml
+++ b/rest-tx/recovery/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>quickstarts</artifactId>
-    <groupId>org.jboss.narayana.quickstart.rts</groupId>
-    <version>5.0.0.M2-SNAPSHOT</version>
+    <groupId>org.jboss.jbossts.quickstart.rts</groupId>
+    <version>4.17.0.Final-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>recovery</artifactId>
@@ -28,9 +28,9 @@
   <dependencies>
     <!-- RESTAT utils -->
     <dependency>
-      <groupId>org.jboss.narayana.rts</groupId>
+      <groupId>org.jboss.jbossts.rts</groupId>
       <artifactId>restat-util</artifactId>
-      <version>5.0.0.M2-SNAPSHOT</version>
+      <version>4.17.0.Final-SNAPSHOT</version>
     </dependency>
     <!-- Jersey container for running participant services -->
     <dependency>
