--- a/TXFramework/wsat-jta-bridge/pom.xml
+++ b/TXFramework/wsat-jta-bridge/pom.xml
@@ -68,7 +68,7 @@
             <dependency>
                 <groupId>org.jboss.bom</groupId>
                 <artifactId>jboss-javaee-6.0-with-tools</artifactId>
-                <version>1.0.0.M7</version>
+                <version>1.0.0.Final</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -122,7 +122,6 @@
         <dependency>
             <groupId>org.jboss.spec.javax.transaction</groupId>
             <artifactId>jboss-transaction-api_1.1_spec</artifactId>
-            <version>1.0.0.Final</version>
             <scope>provided</scope>
         </dependency>
 
@@ -177,7 +176,7 @@
             <plugin>
                 <groupId>org.jboss.as.plugins</groupId>
                 <artifactId>jboss-as-maven-plugin</artifactId>
-                <version>7.2.0.Alpha1-SNAPSHOT</version>
+                <version>${jboss-as.version}</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
@@ -194,7 +193,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.7.2</version>
+                <version>2.9</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
@@ -215,6 +214,7 @@
                 <dependency>
                     <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
@@ -225,7 +225,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
-			    <skip>false</skip>
+			                <skip>false</skip>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -242,6 +242,7 @@
                 <dependency>
                     <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                    <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
@@ -258,6 +259,4 @@
             </build>
         </profile>
     </profiles>
-
 </project>
-
