--- a/TXFramework/wsat-simple/pom.xml
+++ b/TXFramework/wsat-simple/pom.xml
@@ -68,7 +68,7 @@
             <dependency>
                 <groupId>org.jboss.bom</groupId>
                 <artifactId>jboss-javaee-6.0-with-tools</artifactId>
-                <version>1.0.0.M7</version>
+                <version>1.0.0.Final</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -164,7 +164,7 @@
             <plugin>
                 <groupId>org.jboss.as.plugins</groupId>
                 <artifactId>jboss-as-maven-plugin</artifactId>
-                <version>7.2.0.Alpha1-SNAPSHOT</version>
+                <version>${jboss-as.version}</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
@@ -181,7 +181,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.7.2</version>
+                <version>2.9</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
@@ -202,6 +202,7 @@
                 <dependency>
                     <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
@@ -229,6 +230,7 @@
                 <dependency>
                     <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                    <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
@@ -245,6 +247,4 @@
             </build>
         </profile>
     </profiles>
-
 </project>
-
