--- a/TXFramework/wsba-participant-completion-simple/pom.xml
+++ b/TXFramework/wsba-participant-completion-simple/pom.xml
@@ -20,7 +20,6 @@
         <narayana.version>5.0.0.M2-SNAPSHOT</narayana.version>
     </properties>
 
-
     <dependencyManagement>
         <dependencies>
         <!-- Define the version of JBoss' Java EE 6 APIs and Tools we want to import.  -->
@@ -36,7 +35,7 @@
          <dependency>
             <groupId>org.jboss.bom</groupId>
             <artifactId>jboss-javaee-6.0-with-tools</artifactId>
-            <version>1.0.0.M7</version>
+            <version>1.0.0.Final</version>
             <type>pom</type>
             <scope>import</scope>
          </dependency>
@@ -129,7 +128,7 @@
             <plugin>
                 <groupId>org.jboss.as.plugins</groupId>
                 <artifactId>jboss-as-maven-plugin</artifactId>
-                <version>7.2.0.Alpha1-SNAPSHOT</version>
+                <version>${jboss-as.version}</version>
                 <configuration>
                   <skip>true</skip>
                 </configuration>
@@ -146,7 +145,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.7.2</version>
+                <version>2.9</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
@@ -167,6 +166,7 @@
                 <dependency>
                     <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
@@ -194,6 +194,7 @@
                 <dependency>
                     <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                    <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
@@ -210,6 +211,4 @@
             </build>
         </profile>
     </profiles>
-
 </project>
-
