--- a/TXBridge/demo/demo-test/pom.xml
+++ b/TXBridge/demo/demo-test/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <version.jbossas>7.2.0.Alpha1-SNAPSHOT</version.jbossas>
         <version.org.jboss.arquillian>1.0.0.Final</version.org.jboss.arquillian>
-        <version.org.jboss.arquillian.drone>1.0.0.Final</version.org.jboss.arquillian.drone>
+        <version.org.jboss.arquillian.drone>1.1.0.CR1</version.org.jboss.arquillian.drone>
         <version.org.jboss.arquillian.graphene>1.0.0.Final</version.org.jboss.arquillian.graphene>
         <version.junit>4.8.2</version.junit>
 
