--- a/TXFramework/restat-simple/pom.xml
+++ b/TXFramework/restat-simple/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jboss.jbossts.quickstart.txframework.restat-simple</groupId>
     <artifactId>restat-simple-all</artifactId>
-    <version>4.17.0.Final</version>
+    <version>4.17.1.Final-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>JBoss Narayana Quickstarts: Simple WS-AT Web service using the TXFramework</name>
     <description>JBoss Narayana Quickstarts: Simple WS-AT Web service using the TXFramework</description>
@@ -17,7 +17,7 @@
   resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jboss-as.version>7.2.0.Alpha1-SNAPSHOT</jboss-as.version>
-        <narayana.version>4.17.0.Final</narayana.version>
+        <narayana.version>4.17.1.Final-SNAPSHOT</narayana.version>
     </properties>
 
     <!-- We add the JBoss repository as we need the JBoss AS connectors
