Updated the groupId back to org.jboss.narayana

--- a/ArjunaJTS/recovery/pom.xml
+++ b/ArjunaJTS/recovery/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <groupId>org.jboss.jbossts.quickstart.jts</groupId>
+    <groupId>org.jboss.narayana.quickstart.jts</groupId>
     <artifactId>narayana-quickstarts-jts</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
