--- a/XTS/demo/test/pom.xml
+++ b/XTS/demo/test/pom.xml
@@ -4,7 +4,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <parent>
-        <groupId>org.jboss.jbossts.quickstarts.xts.demo</groupId>
+        <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
         <artifactId>xts-demo-all</artifactId>
         <version>5.0.0.M2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
