--- a/blacktie/jatmibroker-xatmi/mdb-xatmi-service/pom.xml
+++ b/blacktie/jatmibroker-xatmi/mdb-xatmi-service/pom.xml
@@ -86,7 +86,7 @@
 			<scope>provided</scope>
 		</dependency>
                <dependency>
-                       <groupId>org.jboss.jbossts</groupId>
+                       <groupId>org.jboss.narayana</groupId>
                        <artifactId>jbossjts</artifactId>
                        <scope>provided</scope>
                </dependency>
