--- a/TXBridge/demo/service/pom.xml
+++ b/TXBridge/demo/service/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <groupId>org.jboss.jbossts</groupId>
+        <groupId>org.jboss.narayana</groupId>
         <artifactId>jbosstxbridge-demo</artifactId>
         <version>5.0.0.M2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jboss.jbossts</groupId>
+    <groupId>org.jboss.narayana</groupId>
     <artifactId>jbosstxbridge-demo-service</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -53,7 +53,7 @@
             <version>1.0.0.Final</version>
         </dependency>
         <dependency>
-            <groupId>org.jboss.jbossts.xts</groupId>
+            <groupId>org.jboss.narayana.xts</groupId>
             <artifactId>jbossxts</artifactId>
             <classifier>api</classifier>
             <version>5.0.0.M2-SNAPSHOT</version>
@@ -66,7 +66,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.jboss.jbossts.jta</groupId>
+            <groupId>org.jboss.narayana.jta</groupId>
             <artifactId>jta</artifactId>
             <version>5.0.0.M2-SNAPSHOT</version>
             <scope>provided</scope>
@@ -78,7 +78,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.jboss.jbossts</groupId>
+            <groupId>org.jboss.narayana</groupId>
             <artifactId>jbosstxbridge</artifactId>
             <version>5.0.0.M2-SNAPSHOT</version>
             <scope>provided</scope>
