--- a/TXFramework/restat-simple/pom.xml
+++ b/TXFramework/restat-simple/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jboss.jbossts.quickstart.txframework.restat-simple</groupId>
+    <groupId>org.jboss.narayana.quickstart.txframework.restat-simple</groupId>
     <artifactId>restat-simple-all</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -78,7 +78,7 @@
     <dependencies>
         <!-- The XTS api needed to use WS-AT -->
         <dependency>
-            <groupId>org.jboss.jbossts.xts</groupId>
+            <groupId>org.jboss.narayana.xts</groupId>
             <artifactId>jbossxts</artifactId>
             <classifier>api</classifier>
             <version>${narayana.version}</version>
@@ -98,14 +98,14 @@
         </dependency>
         
         <dependency>
-            <groupId>org.jboss.jbossts.rts</groupId>
+            <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-util</artifactId>
             <version>${narayana.version}</version>
         </dependency>
 
         <!-- The TXFramework api needed to simplify usage of WS-AT -->
         <dependency>
-            <groupId>org.jboss.jbossts.txframework</groupId>
+            <groupId>org.jboss.narayana.txframework</groupId>
             <artifactId>txframework</artifactId>
             <version>${narayana.version}</version>
             <scope>provided</scope>
