--- a/XTS/demo/ear/pom.xml
+++ b/XTS/demo/ear/pom.xml
@@ -4,7 +4,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <parent>
-        <groupId>org.jboss.jbossts.quickstarts.xts.demo</groupId>
+        <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
         <artifactId>xts-demo-all</artifactId>
         <version>5.0.0.M2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
@@ -15,13 +15,13 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jboss.jbossts.quickstarts.xts.demo</groupId>
+            <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
             <artifactId>xts-demo-war</artifactId>
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.jboss.jbossts.quickstarts.xts.demo</groupId>
+            <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
             <artifactId>xts-demo-webservices</artifactId>
             <version>${project.version}</version>
             <type>war</type>
@@ -53,12 +53,12 @@
                     <defaultJavaBundleDir>lib</defaultJavaBundleDir>
                     <modules>
                         <webModule>
-                            <groupId>org.jboss.jbossts.quickstarts.xts.demo</groupId>
+                            <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
                             <artifactId>xts-demo-war</artifactId>
                             <contextRoot>/xts-demo</contextRoot>
                         </webModule>
                         <webModule>
-                            <groupId>org.jboss.jbossts.quickstarts.xts.demo</groupId>
+                            <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
                             <artifactId>xts-demo-webservices</artifactId>
                             <contextRoot>/xts-demo-webservices</contextRoot>
                         </webModule>
