--- a/XTS/demo/pom.xml
+++ b/XTS/demo/pom.xml
@@ -17,7 +17,7 @@
 	-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.jboss.jbossts.quickstarts.xts.demo</groupId>
+    <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
     <artifactId>xts-demo-all</artifactId>
     <packaging>pom</packaging>
     <version>5.0.0.M2-SNAPSHOT</version>
