--- a/fileio/pom.xml
+++ b/fileio/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<!-- Artifact Configuration -->
-	<groupId>org.jboss.jbossts</groupId>
+	<groupId>org.jboss.narayana</groupId>
 	<artifactId>jbossts-transactional-fileio-demo</artifactId>
 	<version>5.0.0.M2-SNAPSHOT</version>
 	<name>JBoss Transactional File I/O Demo</name>
@@ -60,7 +60,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>org.jboss.jbossts.fileio.xalib.txfiles.demo.TXFilesDemoApp</mainClass>
+					<mainClass>org.jboss.narayana.fileio.xalib.txfiles.demo.TXFilesDemoApp</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -77,7 +77,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>org.jboss.jbossts.fileio.xalib.txdirs.demo.TXDirsDemoApp</mainClass>
+					<mainClass>org.jboss.narayana.fileio.xalib.txdirs.demo.TXDirsDemoApp</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -85,7 +85,7 @@
 	<dependencies>
 		<!-- JBoss transactional file i/o -->
 		<dependency>
-			<groupId>org.jboss.jbossts</groupId>
+			<groupId>org.jboss.narayana</groupId>
 			<artifactId>jbossts-transactional-fileio</artifactId>
 			<version>${version.jbossts.transactional.fileio}</version>
 		</dependency>
