--- a/rest-tx/pom.xml
+++ b/rest-tx/pom.xml
@@ -17,7 +17,7 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.jboss.jbossts.quickstart.rts</groupId>
+  <groupId>org.jboss.narayana.quickstart.rts</groupId>
   <artifactId>quickstarts</artifactId>
   <version>5.0.0.M2-SNAPSHOT</version>
   <name>RESTAT Quickstarts</name>
