--- a/rest-tx/service/pom.xml
+++ b/rest-tx/service/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>quickstarts</artifactId>
-    <groupId>org.jboss.jbossts.quickstart.rts</groupId>
+    <groupId>org.jboss.narayana.quickstart.rts</groupId>
     <version>5.0.0.M2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -55,7 +55,7 @@
   <dependencies>
     <!-- REST-AT helper -->
     <dependency>
-      <groupId>org.jboss.jbossts.rts</groupId>
+      <groupId>org.jboss.narayana.rts</groupId>
       <artifactId>restat-util</artifactId>
       <version>5.0.0.M2-SNAPSHOT</version>
     </dependency>
