Revert "updated to narayana-jts-jacorb" and the package change from org.jboss.jbossts -> narayana
This reverts commit 07c88067da7c6c24aa1e7e0bb67fa835c6e12d63.

--- a/blacktie/jatmibroker-xatmi/mdb-xatmi-service/pom.xml
+++ b/blacktie/jatmibroker-xatmi/mdb-xatmi-service/pom.xml
@@ -86,8 +86,8 @@
 			<scope>provided</scope>
 		</dependency>
                <dependency>
-                       <groupId>org.jboss.narayana.jts</groupId>
-                       <artifactId>narayana-jts-jacorb</artifactId>
+                       <groupId>org.jboss.jbossts</groupId>
+                       <artifactId>jbossjts</artifactId>
                        <scope>provided</scope>
                </dependency>
 		<dependency>
