--- a/TXFramework/wsat-simple/pom.xml
+++ b/TXFramework/wsat-simple/pom.xml
@@ -6,7 +6,7 @@
     <groupId>org.jboss.narayana.quickstart.txframework.wsat-simple</groupId>
     <artifactId>wsat-simple-all</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>JBoss Narayana Quickstarts: Simple WS-AT Web service using the TXFramework</name>
     <description>JBoss Narayana Quickstarts: Simple WS-AT Web service using the TXFramework</description>
 
@@ -140,6 +140,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.spec.javax.ejb</groupId>
+            <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -147,31 +153,7 @@
               deployed -->
         <finalName>wsat-simple</finalName>
         <plugins>
-            <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.1.1</version>
-                <configuration>
-                    <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                    <archive>
-                        <manifestEntries>
-                            <Dependencies>org.jboss.xts</Dependencies>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
-            </plugin>
-            <!-- JBoss AS plugin to deploy war -->
-            <plugin>
-                <groupId>org.jboss.as.plugins</groupId>
-                <artifactId>jboss-as-maven-plugin</artifactId>
-                <version>${jboss-as.version}</version>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-            <!-- Compiler plugin enforces Java 1.6 compatibility and activates
-          annotation processors -->
-            <plugin>
+	    <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.1</version>
                 <configuration>
