--- a/TXFramework/wsat-jta-bridge/pom.xml
+++ b/TXFramework/wsat-jta-bridge/pom.xml
@@ -228,7 +228,7 @@
 			                <skip>false</skip>
                             <systemPropertyVariables>
                                 <!-- For arquillian -->
-                                <jbossHome>${env.APP_SERVER_HOME}</jbossHome>
+                                <jbossHome>${env.JBOSS_HOME}</jbossHome>
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
